--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
+    <ion-title class="title-home">
+      CHEECKLIST
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,9 +12,16 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="container1" [routerLink]="['/log-docente']" >
+    <ion-button>
+      INGRESAR COMO DOCENTE
+    </ion-button>
   </div>
+  <div class="container">
+    <ion-button [routerLink]="['/login']">
+      INGRESAR COMO ALMUNO
+    </ion-button>
+  </div>
+
+
 </ion-content>
