--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,6 +22,11 @@
       INGRESAR COMO ALMUNO
     </ion-button>
   </div>
+  <div class="container">
+    <ion-button [routerLink]="['/camara']">
+      CAMARA
+    </ion-button>
+  </div>
 
 
 </ion-content>
